--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Todo List</title>
+    <title>Dischi Json</title>
     <!-- bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <!-- axios -->
@@ -16,19 +16,25 @@
 <body>
 
     <div id="app">
-        <div class="box d-flex flex-wrap" v-for="(song,index) in songsList">
-            <div>
-              <div class="card" >
-                <img :src="song.urlImg" alt="cover of the song">
-                <div class="">
-                  <h5 class="card-title"> {{song.title}}</h5>
-                  <p class="card-text" > {{song.singer}}</p>
-                  <p class="card-text">{{song.year}}</p>
-                </div>
-              </div>
-            </div>
-          </div>
 
+        <header>
+            <section>
+                <img src="./img/logo-small.svg" alt="logo spotify">
+            </section>
+        </header>
+
+        <main>
+            <div class="my_container">
+                <div class="single-card" v-for="(song,index) in songsList">
+                    <img :src="song.urlImg" alt="cover of the song">
+                    <div class="description">
+                      <h5 class="card-title"> {{song.title}}</h5>
+                      <p class="card-text" > {{song.singer}}</p>
+                      <p class="card-text">{{song.year}}</p>
+                    </div>
+                </div>
+            </div>
+        </main>
     </div>
 
     <script src="./js/script.js"></script>
